[tool.poetry]
name = "tapita"
version = "0.1.0"
description = "A tool/library to automatically create book covers"
authors = ["Roberto Alsina <roberto.alsina@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ralsina/tapita"
repository = "https://github.com/ralsina/tapita"
keywords = ["ebook", "cover"]
packages = [
  { include = "tapita" }
]

[tool.poetry.dependencies]
python = "^3.7"
Pillow = "^9.5.0"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"

[tool.poetry.scripts]
tapita = 'tapita.__main__:cover'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
